Checking in to show to Tobias.

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -3,7 +3,7 @@
     "minimum_chrome_version": "38",
     "version": "0.12.1",
     "author": "TobiasBales",
-    "name": "PlayUAV OSD Configurator",
+    "name": "PlayUAV OSD Configurator[hack]",
     "short_name": "playuavosdconfigurator",
     "description": "Crossplatform configuration tool for PlayUAV OSD",
     "offline_enabled": true,
