--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "app-category-type": "public.app-category.productivity",
     "iconUrl": "https://raw.githubusercontent.com/TobiasBales/PlayuavOSDConfigurator/master/build/icon.ico",
     "osx": {
-      "title": "Playuav OSD Configurator",
+      "title": "Playuav OSD Configurator[hack]",
       "icon": "build/icon.icns",
       "icon-size": 128,
       "contents": [
